# psmt_malicious

./: CMakeLists.txt  LICENSE  README.md
backup_files/: bk.cpp  bk1.cpp  bk2.cpp  bk3.cpp  bk4.cpp  final_wData.cpp  main_bk.cpp
data/: README.md  do_hash_and_chunk.py  hashed_chunks.csv  query.csv
hashing/: README.md  hash.cpp  hash.h  main_hash.cpp  test.cpp  test.h
include/: chebyshev_config.h  chunk_reader.h  core.h  dep.h  evenPS.h  fhe_init.h  tests.h  utilsPS.h  vaf.h
ktsj24/: ktsj24.cpp
logreg/: README.md  core.cpp  core.h  main_logreg.cpp  tests.cpp  tests.h  utils.cpp  utils.h
materials/: [PSMT_Malicious] Parameter Selector.ipynb
materials/.ipynb_checkpoints/: [PSMT_Malicious] Parameter Selector-checkpoint.ipynb
notes/: approximation_notes.txt
pepsi/: README.md  client.cpp  core.cpp  fhe_init.cpp  fhe_init_pepsi.h  main_pepsi.cpp  pepsi_client.h  pepsi_core.h  pepsi_server.h  pepsi_test.h  server.cpp  tests.cpp
psmt/: README.md  client.cpp  client.h  main_psmt.cpp  server.cpp  server.h  tests.cpp  tests.h  utils.cpp  utils.h
src/: chebyshev_config.cpp  core.cpp  dep.cpp  evenPS.cpp  fhe_init.cpp  main.cpp  main_old.cpp  main_vaf.cpp  tests.cpp  utilsPS.cpp  vaf.cpp
watchlist_dataset/: note.txt  query.csv  repliced_query.csv
watchlist_dataset/scripts/: do_chunk.py  do_hash.py  extract_ids.py  replicate_queries.py
